# configsafe

./: .gitignore  CONTRIBUTING.md  README.md  configsafe.py  pyproject.toml
.github/workflows/: ci.yml
examples/: bad_django_settings.py  bad_docker_compose.yml  bad_fastapi_config.py  bad_flask_config.py  bad_k8s_deployment.yml  bad_nginx.conf  good_django_settings.py
