[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "configsafe"
version = "0.1.0"
description = "Application Configuration Security Scanner — find misconfigurations in Django, Flask, FastAPI, docker-compose, nginx, Kubernetes, and general configs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Kris Kimmerle", email = "kris@kimmerle.com"},
]
keywords = ["security", "configuration", "django", "flask", "fastapi", "docker", "nginx", "kubernetes", "linter", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/configsafe"
Repository = "https://github.com/kriskimmerle/configsafe"
Issues = "https://github.com/kriskimmerle/configsafe/issues"

[project.scripts]
configsafe = "configsafe:main"
